--- a/index.html
+++ b/index.html
@@ -120,12 +120,15 @@
         background-color: #161816;
         position: relative;
         overflow: hidden;
+        
       }
 
       .editor-wrapper {
         width: 100%;
         height: 100%;
         display: none;
+        overflow: auto;
+        position: absolute;
       }
 
       .editor-wrapper.active {
